bk_ida/gccida/g2/dw2_asm_output_encoded_addr_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1319:31: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_fmt_ee( MINUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v4, global_rtl[0]); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1349:49: error: use of undeclared identifier 'stru_6F109F'
fprintf( asm_out_file, "\t%s ", ( const char *)&stru_6F109F._IO_save_end + 7); 
                                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dw2_asm_output_encoded_addr_rtx/src/obj/dwarf2asm.o] Error 1
